--- a/styles/style.css
+++ b/styles/style.css
@@ -5,4 +5,20 @@
 
 body {
   overflow: hidden;
+  position: relative;
+  width: 100%;
+}
+
+#timeline {
+  background-color: none;
+  position: absolute;
+  bottom: 40px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 150px;
+}
+
+#timeline img {
+  height: 100%;
 }
